# -Analyse-des-Lois-de-Finances-du-Cameroun

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
data/: articles_extract_2023_2024.json  articles_extract_2024_2025.json  budget_extract_2023_2024.json  budget_extract_2024_2025.json  script_extraction.txt
src/analyse_budget/: analyse_budgetaire.py  analyse_semantique.py  classification.py  extract_budget_info.py  extracteur_texte.py  extraire_ligne_budgetaire_info.py  models_config.py  pretraitement.py
